refactor: reorganització interna i millora de claredat del codi